Prevent zoom on mobile

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-	@apply antialiased tabular-nums font-sans bg-tertiary text-secondary overscroll-none;
+	@apply antialiased tabular-nums font-sans bg-tertiary text-secondary touch-pan-x touch-pan-y overscroll-none;
 }
 
 @layer base {
